feat: Add functionality of login user and password

--- a/DemoLoginPage/DemoLoginPage.csproj
+++ b/DemoLoginPage/DemoLoginPage.csproj
@@ -4,10 +4,10 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{2CBFA678-2646-4D3B-B9E0-9416DD29EC4D}</ProjectGuid>
+    <ProjectGuid>{2F9DD5AB-1595-427C-B38D-A55C7E24A717}</ProjectGuid>
     <OutputType>Exe</OutputType>
-    <RootNamespace>Demo2</RootNamespace>
-    <AssemblyName>Demo2</AssemblyName>
+    <RootNamespace>DemoLoginPage</RootNamespace>
+    <AssemblyName>DemoLoginPage</AssemblyName>
     <TargetFrameworkVersion>v4.8</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
@@ -43,12 +43,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Product.cs" />
-    <Compile Include="ProductHistory.cs" />
-    <Compile Include="ProductStore.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="User.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
